# stellar-identity-credentials-sdk

./: .gitignore  Cargo.toml  README.md  ZK_PROOF_SYSTEM_README.md  package-lock.json  package.json  tsconfig.json
examples/: business-verification.ts  kyc-flow.ts  privacy-preserving-age-check.ts  reputation-builder.ts
sdk/src/: compliance.ts  credentialClient.ts  didClient.ts  didResolver.ts  index.ts  reputation.ts  reputationClient.ts  types.ts  zkProofs.ts
src/: compliance_filter.rs  credential_issuer.rs  did_registry.rs  lib.rs  privacy_features.rs  reputation_score.rs  zk_attestation.rs
ui/src/components/: ComplianceCheck.tsx  DIDManager.tsx  ReputationBadge.tsx
ui/src/hooks/: useStellarIdentity.ts
