[package]
name = "stellar-identity-credentials-sdk"
version = "0.1.0"
edition = "2021"
description = "Stellar-based decentralized identity and verifiable credentials SDK"
authors = ["Stellar Identity Team"]
license = "Apache-2.0"

[dependencies]
soroban-sdk = "22.0.0"
soroban-token-sdk = "22.0.0"
stellar-strkey = "0.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
ed25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"
base64 = "0.21"
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"

[dev-dependencies]
soroban-sdk = { version = "22.0.0", features = ["testutils"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true

[workspace]
members = [
    "contracts/did_registry",
    "contracts/credential_issuer", 
    "contracts/reputation_score",
    "contracts/zk_attestation",
    "contracts/compliance_filter"
]
